sample-app/environments/sample-app/overlays/dev/sample-app/deployment.yaml
---
# Source: sample-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  annotations:
    app.openshift.io/vcs-ref: 05068e93c6112bd919e9dd202535960b2ceda10a
    app.openshift.io/vcs-uri: https://github.com/mf-nodejs/sample-app.git
  labels:
    app.kubernetes.io/name: sample-app
    helm.sh/chart: sample-app-1.0.0-rc0.0.2
    app.kubernetes.io/instance: sample-app
    app: sample-app
    app.openshift.io/runtime: js
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-app
      app.kubernetes.io/instance: sample-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-app
        app.kubernetes.io/instance: sample-app
    spec:
      containers:
        - name: sample-app
          image: "image-registry.openshift-image-registry.svc:5000/ci/sample-app:0.0.2"
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
#           livenessProbe:
#             httpGet:
#               path: /
#               port: http
#           readinessProbe:
#             httpGet:
#               path: /
#               port: http
          resources:
            null
