sample-app/environments/sample-app/overlays/dev/sample-app/service.yaml
---
# Source: sample-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    helm.sh/chart: sample-app-1.0.0-rc0.0.2
    app.kubernetes.io/instance: sample-app
    app: sample-app
spec:
  type: ClusterIP #clusterip
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
